org-selector-btn-group's dropdown button disabled state now synced w/ host btn

--- a/client/src/app/components/shared/org-selector-btn-group/org-selector-btn-group.component.html
+++ b/client/src/app/components/shared/org-selector-btn-group/org-selector-btn-group.component.html
@@ -1,7 +1,7 @@
 <nz-button-group [nzSize]="'small'">
   <ng-content></ng-content>
   <button nz-button nzType="primary"
-    [disabled]="selectorDisabled">
+    [disabled]="disabled">
     <i nz-icon nzType="down"></i>
   </button>
 </nz-button-group>
