org-selector button displaying organizations, most recent selected

--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -12,8 +12,7 @@
     <nz-form-item>
       <nz-form-control>
         <cvc-org-selector-btn-group>
-          <button type="submit" nz-button cvcOrgSelectorBtn
-            nzType="primary"
+          <button type="submit" nz-button cvcOrgSelectorBtn nzType="primary"
             [disabled]="!addCommentForm.valid">
             Add Comment
           </button>
