moved viewer service injection to comment-add out of org-selector-btn

--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -10,8 +10,8 @@
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-control>
-        <cvc-org-selector-btn-group>
+      <nz-form-control *ngIf="(viewer$ | async) as viewer">
+        <cvc-org-selector-btn-group [organizations]="viewer.organizations" [mostRecentOrgId]="viewer.mostRecentOrganizationId">
           <button type="submit" nz-button cvcOrgSelectorBtn nzType="primary"
             [disabled]="!addCommentForm.valid">
             Add Comment
