--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -11,14 +11,22 @@
     </nz-form-item>
     <nz-form-item>
       <nz-form-control *ngIf="(viewer$ | async) as viewer">
-        <cvc-org-selector-btn-group
-          [organizations]="viewer.organizations"
-          [mostRecentOrg]="viewer.mostRecentOrg">
-          <button type="submit" nz-button cvcOrgSelectorBtn nzType="primary"
+          <cvc-org-selector-btn-group *ngIf="viewer.organizations?.length > 1"
+            [organizations]="viewer.organizations"
+            [mostRecentOrg]="viewer.mostRecentOrg">
+            <button type="submit" nz-button cvcOrgSelectorBtn nzType="primary"
+              [disabled]="!addCommentForm.valid">
+              Add Comment
+            </button>
+          </cvc-org-selector-btn-group>
+          <button type="submit"  *ngIf="viewer.organizations?.length <= 1"
+            nz-button
+            [nzSize]="'small'"
+            cvcOrgSelectorBtn
+            nzType="primary"
             [disabled]="!addCommentForm.valid">
             Add Comment
           </button>
-        </cvc-org-selector-btn-group>
       </nz-form-control>
     </nz-form-item>
   </form>
