fixed google oauth signing path

--- a/client/src/app/components/layout/auth-options-list/auth-options-list.component.html
+++ b/client/src/app/components/layout/auth-options-list/auth-options-list.component.html
@@ -1,6 +1,6 @@
 <nz-list nzBordered="false" nzSplit="false">
   <nz-list-item>
-    <form action="/api/auth/google?origin={{ location }}" method="post">
+    <form action="/api/auth/google_oauth2?origin={{ location }}" method="post">
       <input type="hidden" name="authenticity_token" value="{{ xsrfToken }}" />
       <button type="submit" nz-button nzBlock
         nzType="default" nzSize="large" nzShape="round">
