--- a/client/src/app/components/shared/org-selector-btn-group/org-selector-btn-group.component.html
+++ b/client/src/app/components/shared/org-selector-btn-group/org-selector-btn-group.component.html
@@ -1,27 +1,32 @@
-<ng-container>
-  <nz-button-group [nzSize]="'small'">
-    <ng-content></ng-content>
-    <button type="button" nz-button nzType="primary" class="org-dropdown-btn"
-      [disabled]="disabled"
-      nz-dropdown [nzDropdownMenu]="orgMenu">
-      <nz-space nzDirection="horizontal" [nzSize]="4">
-        <span>for</span>
-        <nz-avatar [nzSrc]="mostRecentOrg?.profileImagePath" [nzSize]="10"
-          [nzShape]="'square'"></nz-avatar>
-        <i nz-icon nzType="down"></i>
-      </nz-space>
-    </button>
-  </nz-button-group>
-  <nz-dropdown-menu #orgMenu="nzDropdownMenu">
-    <ul nz-menu>
-      <li *ngFor="let org of organizations"
-        nz-menu-item [nzSelected]="mostRecentOrg?.id === org.id"
-        (click)="selectOrg(org.id)">
-        <nz-avatar [nzSrc]="org?.profileImagePath" [nzSize]="10"
-          [nzShape]="'square'"
-          style="background-color:#f0f5ff;"></nz-avatar>
-        {{ org.name }}
-      </li>
-    </ul>
-  </nz-dropdown-menu>
-</ng-container>
+<!-- TODO: conditionally display select if has more than 1 org,
+     instead of forcing the parent component to do the logic.
+     Try: https://stackoverflow.com/questions/41593973/how-to-conditionally-wrap-a-div-around-ng-content -->
+
+<nz-button-group [nzSize]="'small'">
+
+  <ng-content></ng-content>
+
+  <button type="button" nz-button nzType="primary" class="org-dropdown-btn"
+    [disabled]="disabled"
+    nz-dropdown [nzDropdownMenu]="orgMenu">
+    <nz-space nzDirection="horizontal" [nzSize]="4">
+      <span>for</span>
+      <nz-avatar [nzSrc]="mostRecentOrg?.profileImagePath" [nzSize]="10"
+        [nzShape]="'square'"></nz-avatar>
+      <i nz-icon nzType="down"></i>
+    </nz-space>
+  </button>
+</nz-button-group>
+
+<nz-dropdown-menu #orgMenu="nzDropdownMenu">
+  <ul nz-menu>
+    <li *ngFor="let org of organizations"
+      nz-menu-item [nzSelected]="mostRecentOrg?.id === org.id"
+      (click)="selectOrg(org.id)">
+      <nz-avatar [nzSrc]="org?.profileImagePath" [nzSize]="10"
+        [nzShape]="'square'"
+        style="background-color:#f0f5ff;"></nz-avatar>
+      {{ org.name }}
+    </li>
+  </ul>
+</nz-dropdown-menu>
