--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -10,10 +10,11 @@
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-control *ngIf="(viewer$ | async) as viewer">
-          <cvc-org-selector-btn-group *ngIf="viewer.organizations.length > 1"
-            [organizations]="viewer.organizations"
-            [mostRecentOrg]="viewer.mostRecentOrg">
+      <nz-form-control>
+          <cvc-org-selector-btn-group *ngIf="organizations.length > 1"
+            [organizations]="organizations"
+            [mostRecentOrg]="mostRecentOrg"
+            (orgSelected)="selectOrg($event)">
             <button type="submit" nz-button
               cvcOrgSelectorBtn
               nzType="primary"
@@ -21,7 +22,7 @@
               Add Comment
             </button>
           </cvc-org-selector-btn-group>
-          <button type="submit" *ngIf="viewer.organizations.length <= 1"
+          <button type="submit" *ngIf="organizations.length <= 1"
             nz-button
             [nzSize]="'small'"
             nzType="primary"
