--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -100,20 +100,20 @@
     </nz-header>
     <nz-content class="app-content">
       <router-outlet></router-outlet>
-      <div nz-row>
-        <div nz-icol nzSpan="12" >
-          <h4>data$:</h4>
-          <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
-        </div>
-        <div nz-icol nzSpan="12" >
-          <h4>viewer$:</h4>
-          <p>Signed in: {{ signedIn$ | async }}</p>
-          <p>Signed out: {{ signedOut$ | async }}</p>
-          <p>Can curate: {{ canCurate$ | async }}</p>
-          <p>Can moderate: {{ canModerate$ | async }}</p>
-          <ngx-json-viewer *ngIf="(viewer$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
-        </div>
-      </div>
+      <!-- <div nz-row>
+           <div nz-icol nzSpan="12" >
+           <h4>data$:</h4>
+           <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
+           </div>
+           <div nz-icol nzSpan="12" >
+           <h4>viewer$:</h4>
+           <p>Signed in: {{ signedIn$ | async }}</p>
+           <p>Signed out: {{ signedOut$ | async }}</p>
+           <p>Can curate: {{ canCurate$ | async }}</p>
+           <p>Can moderate: {{ canModerate$ | async }}</p>
+           <ngx-json-viewer *ngIf="(viewer$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
+           </div>
+           </div> -->
     </nz-content>
   </nz-layout>
 </nz-layout>
