--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -1,51 +1,41 @@
 <nz-card nzType="inner">
-  <nz-space nzDirection="vertical">
+  <form nz-form
+    [formGroup]="addCommentForm"
+    (ngSubmit)="submitComment(addCommentForm.value)"
+    nzLayout="vertical">
     <ng-container *ngIf="(submitError$ | async) as errors">
-      <nz-space-item *ngIf="errors.length > 0">
+      <nz-form-item *ngIf="errors.length > 0">
         <cvc-form-errors-alert [errors]="errors">
         </cvc-form-errors-alert>
-      </nz-space-item>
+      </nz-form-item>
     </ng-container>
-    <nz-space-item>
-      <form nz-form
-        [formGroup]="addCommentForm"
-        (ngSubmit)="submitComment(addCommentForm.value)"
-        nzLayout="vertical">
-        <nz-form-item>
-          <!-- <nz-form-label nzRequired>Comment</nz-form-label> -->
-          <nz-form-control nzErrorTip="Please enter comment text.">
-            <textarea formControlName="body" nz-input rows="4" placeholder="Enter your comment here."></textarea>
-          </nz-form-control>
-        </nz-form-item>
-        <nz-form-item>
-          <nz-form-control>
-            <cvc-org-selector-btn-group *ngIf="organizations.length > 1"
-              [organizations]="organizations"
-              [mostRecentOrg]="mostRecentOrg"
-              (orgSelected)="selectOrg($event)">
-              <button type="submit" nz-button
-                cvcOrgSelectorBtn
-                nzType="primary"
-                [disabled]="!addCommentForm.valid">
-                Add Comment
-              </button>
-            </cvc-org-selector-btn-group>
-            <button type="submit" *ngIf="organizations.length <= 1"
-              nz-button
-              [nzSize]="'small'"
-              nzType="primary"
-              [disabled]="!addCommentForm.valid">
-              Add Comment
-            </button>
-          </nz-form-control>
-        </nz-form-item>
-      </form>
-    </nz-space-item>
-  </nz-space>
-  <p>submitSuccess$</p>
-  <ngx-json-viewer [json]="submitSuccess$ | async" ></ngx-json-viewer>
-  <p>isSubmitting$</p>
-  <ngx-json-viewer [json]="isSubmitting$ | async" ></ngx-json-viewer>
-  <p>error$</p>
-  <ngx-json-viewer [json]="submitError$ | async" ></ngx-json-viewer>
+    <nz-form-item>
+      <!-- <nz-form-label nzRequired>Comment</nz-form-label> -->
+      <nz-form-control nzErrorTip="Please enter comment text.">
+        <textarea formControlName="body" nz-input rows="4" placeholder="Enter your comment here."></textarea>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control>
+        <cvc-org-selector-btn-group *ngIf="organizations.length > 1"
+          [organizations]="organizations"
+          [mostRecentOrg]="mostRecentOrg"
+          (orgSelected)="selectOrg($event)">
+          <button type="submit" nz-button
+            cvcOrgSelectorBtn
+            nzType="primary"
+            [disabled]="!addCommentForm.valid">
+            Add Comment
+          </button>
+        </cvc-org-selector-btn-group>
+        <button type="submit" *ngIf="organizations.length <= 1"
+          nz-button
+          [nzSize]="'small'"
+          nzType="primary"
+          [disabled]="!addCommentForm.valid">
+          Add Comment
+        </button>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
 </nz-card>
