comment form submit buttons right-aligned

--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -16,7 +16,7 @@
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-control>
+      <nz-form-control class="form-buttons">
         <cvc-org-selector-btn-group
           [organizations]="organizations"
           [mostRecentOrg]="mostRecentOrg"
