--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -16,19 +16,21 @@
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-control class="form-buttons">
-        <cvc-org-selector-btn-group
-          [organizations]="organizations"
-          [mostRecentOrg]="mostRecentOrg"
-          (orgSelected)="selectOrg($event)">
-          <button type="submit" nz-button
-            cvcOrgSelectorBtn
-            nzType="primary"
-            nzSize="small"
-            [disabled]="!addCommentForm.valid">
-            Add Comment
-          </button>
-        </cvc-org-selector-btn-group>
+      <nz-form-control>
+        <cvc-form-buttons>
+          <cvc-org-selector-btn-group
+            [organizations]="organizations"
+            [mostRecentOrg]="mostRecentOrg"
+            (orgSelected)="selectOrg($event)">
+            <button type="submit" nz-button
+              cvcOrgSelectorBtn
+              nzType="primary"
+              nzSize="small"
+              [disabled]="!addCommentForm.valid">
+              Add Comment
+            </button>
+          </cvc-org-selector-btn-group>
+        </cvc-form-buttons>
       </nz-form-control>
     </nz-form-item>
   </form>
