updated comment form validation & err msg

--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -11,7 +11,7 @@
     </ng-container>
     <nz-form-item>
       <!-- <nz-form-label nzRequired>Comment</nz-form-label> -->
-      <nz-form-control nzErrorTip="Please enter comment text.">
+      <nz-form-control nzErrorTip="Please enter a comment at least 10 characters in length.">
         <textarea formControlName="body" nz-input rows="4" placeholder="Enter your comment here."></textarea>
       </nz-form-control>
     </nz-form-item>
