fixed flagged display test

--- a/client/src/app/components/shared/flaggable/flaggable.component.html
+++ b/client/src/app/components/shared/flaggable/flaggable.component.html
@@ -1,6 +1,6 @@
 <ng-template #flaggedContent><ng-content></ng-content></ng-template>
 
-<ng-container *ngIf="flags > 0" >
+<ng-container *ngIf="flags === 0" >
   <ng-container *ngTemplateOutlet="flaggedContent"></ng-container>
 </ng-container>
 
