--- a/client/src/app/components/shared/comment-list/comment-list.component.html
+++ b/client/src/app/components/shared/comment-list/comment-list.component.html
@@ -1,21 +1,21 @@
 <nz-card nzTitle="Comments">
-  <p>Comments Here</p>
-  <!-- <nz-list [nzDataSource]="comments$ | async"
-       [nzRenderItem]="comment"
-       nzSize="small"
-       nzItemLayout="horizontal">
-       <ng-template #comment let-comment>
-       <nz-list-item>
-       <nz-comment [nzAuthor]="comment.node.commentor.name"
-       [nzDatetime]="comment.node.createdAt | timeago">
-       <nz-avatar *ngIf="comment.node.commentor.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="comment.node.commentor.profileImagePath"></nz-avatar>
-       <ng-template #noAvatar><nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar></ng-template>
-       <nz-comment-content>
-       <p>{{ comment.node.comment }}</p>
-       </nz-comment-content>
-       </nz-comment>
-       </nz-list-item>
-       </ng-template>
-       </nz-list> -->
-  <!-- <cvc-comment-add *ngIf="canCurate$ | async" [subject]="subject"></cvc-comment-add> -->
+  <nz-list [nzDataSource]="comments.comments$ | async"
+    [nzRenderItem]="comment"
+    nzSize="small"
+    nzItemLayout="horizontal">
+    <ng-template #comment let-comment>
+      <nz-list-item>
+        <nz-comment [nzAuthor]="comment.node.commentor.name"
+          [nzDatetime]="comment.node.createdAt | timeago">
+          <nz-avatar *ngIf="comment.node.commentor.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="comment.node.commentor.profileImagePath"></nz-avatar>
+          <ng-template #noAvatar><nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar></ng-template>
+          <nz-comment-content>
+            <p>{{ comment.node.comment }}</p>
+          </nz-comment-content>
+        </nz-comment>
+      </nz-list-item>
+    </ng-template>
+  </nz-list>
+  <cvc-comment-add *ngIf="viewer.canCurate$ | async" [subject]="subject"></cvc-comment-add>
 </nz-card>
+<ngx-json-viewer *ngIf="comments.comments$ | async as comments" [json]="comments" ></ngx-json-viewer>
