comment-list shows loading animation when isLoading = true

--- a/client/src/app/components/shared/comment-list/comment-list.component.html
+++ b/client/src/app/components/shared/comment-list/comment-list.component.html
@@ -1,5 +1,6 @@
 <nz-card nzTitle="Comments">
   <nz-list [nzDataSource]="commentsService.comments$ | ngrxPush"
+    [nzLoading]="commentsService.isLoading$ | ngrxPush"
     [nzRenderItem]="comment"
     nzSize="small"
     nzItemLayout="horizontal">
