--- a/client/src/app/components/shared/comment-list/comment-list.component.less
+++ b/client/src/app/components/shared/comment-list/comment-list.component.less
@@ -3,5 +3,10 @@
 }
 
 nz-list-header {
-  padding-top: 0;
+  padding: 0;
+  margin: 0;
+  [nz-list-load-more] {
+    margin-top: -.5em;
+    padding-bottom: .5em;
+  }
 }
