refactored org-selector-btn to use simpler API

--- a/client/src/app/components/shared/org-selector-btn-group/org-selector-btn-group.component.html
+++ b/client/src/app/components/shared/org-selector-btn-group/org-selector-btn-group.component.html
@@ -18,7 +18,7 @@
         nz-dropdown [nzDropdownMenu]="orgMenu">
         <nz-space nzDirection="horizontal" [nzSize]="4">
           <span>for</span>
-          <nz-avatar [nzSrc]="(mostRecentOrg$ | async)?.profileImagePath" [nzSize]="10"
+          <nz-avatar [nzSrc]="mostRecentOrg?.profileImagePath" [nzSize]="10"
             [nzShape]="'square'"></nz-avatar>
           <i nz-icon nzType="down"></i>
         </nz-space>
@@ -30,7 +30,7 @@
   <nz-dropdown-menu #orgMenu="nzDropdownMenu">
     <ul nz-menu>
       <li *ngFor="let org of organizations"
-        nz-menu-item [nzSelected]="(mostRecentOrg$ | async)?.id === org.id"
+        nz-menu-item [nzSelected]="mostRecentOrg?.id === org.id"
         (click)="selectOrg(org)">
         <nz-avatar [nzSrc]="org?.profileImagePath" [nzSize]="10"
           [nzShape]="'square'"
