--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -19,7 +19,7 @@
       <nz-form-control>
         <cvc-form-buttons>
           <cvc-org-selector-btn-group
-            (orgSelected)="selectOrg($event)">
+            [(selectedOrg)]="this.mostRecentOrg">
             <button type="submit" nz-button
               cvcOrgSelectorBtn
               nzType="primary"
