--- a/client/src/app/components/shared/participant-list/participant-list.component.html
+++ b/client/src/app/components/shared/participant-list/participant-list.component.html
@@ -1,13 +1,11 @@
 <nz-card [nzTitle]="listTitle" nz-type="inner" style="margin-bottom: 1em">
     <nz-list>
         <nz-list-item *ngFor="let u of participantList" nzSize="small"
-            [class.selected-participant]="u.id == selectedUser?.id" (click)="onParticipantSelected(u)" class="participant-list-item">
-            <nz-avatar *ngIf="u.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="u.profileImagePath">
-            </nz-avatar>
-            <ng-template #noAvatar>
-                <nz-avatar nz-comment-avatar [nzText]="u.username.charAt(0) | uppercase"></nz-avatar>
-            </ng-template>
-            <span>{{u.username}}</span>
+            [class.selected-participant]="u.id == selectedItem?.id" (click)="onParticipantSelected(u)" class="participant-list-item">
+            <ng-container
+                [ngTemplateOutlet]="itemTemplateRef || null"
+                [ngTemplateOutletContext]="{ $implicit: u }">
+            </ng-container>
         </nz-list-item>
     </nz-list>
 </nz-card>
