multi-field type now able to support FieldArrays and FieldGroups

--- a/client/src/app/forms/types/multi-field/multi-field.component.html
+++ b/client/src/app/forms/types/multi-field/multi-field.component.html
@@ -6,7 +6,7 @@
       {{ to.label }}
     </nz-form-label>
   </ng-container>
-  <div class="field-row">
+  <div>
     <div class="field-col">
       <formly-field [field]="field"></formly-field>
     </div>
