--- a/client/src/app/forms/types/multi-field/multi-field.component.less
+++ b/client/src/app/forms/types/multi-field/multi-field.component.less
@@ -1,17 +1,19 @@
 :host {
   display: block;
+  margin-bottom: 1em;
 }
 
 @delete-btn-width: 24px;
 @delete-btn-margin: 1em;
-.field-row {
-  width: 100%;
+
+.ant-form-item {
+  margin-bottom: .25em;
 }
+
 .field-col {
   display: inline-block;
   width: calc(~'100% - @{delete-btn-width} - @{delete-btn-margin}');
 }
-
 .field-delete-btn {
   display: inline-block;
   margin-left: @delete-btn-margin;
