--- a/client/src/app/forms/types/source-id-input/source-id-input.component.html
+++ b/client/src/app/forms/types/source-id-input/source-id-input.component.html
@@ -1,16 +1,18 @@
-<div class="field-row">
-  <div class="source-selector" >
-    <nz-select [ngModel]="sourceSource" nzPlaceHolder="Select Type">
-      <nz-option *ngFor="let option of sourceOptions"
-        [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
-    </nz-select>
+<ng-container *ngIf="field.model">
+  {{ field.model.citation }}
+</ng-container>
+<ng-container *ngIf="!field.model.id">
+  <div class="field-row">
+    <div class="source-selector">
+      <nz-select [ngModel]="sourceSource" nzPlaceHolder="Select Type">
+        <nz-option *ngFor="let option of sourceOptions" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
+      </nz-select>
+    </div>
+    <div class="id-input">
+      <input nz-input [formControl]="formControl" [formlyAttributes]="field" />
+    </div>
   </div>
-  <div class="id-input">
-    <input nz-input
-      [formControl]="formControl"
-      [formlyAttributes]="field" />
-  </div>
-</div>
+</ng-container>
 <div>
-  <ngx-json-viewer [json]="field.model" ></ngx-json-viewer>
+  <ngx-json-viewer [json]="field.model"></ngx-json-viewer>
 </div>
