--- a/client/src/app/forms/types/source-id-input/source-id-input.component.html
+++ b/client/src/app/forms/types/source-id-input/source-id-input.component.html
@@ -4,12 +4,12 @@
 <ng-container *ngIf="!field.model.id">
   <div class="field-row">
     <div class="source-selector">
-      <nz-select [ngModel]="sourceSource" nzPlaceHolder="Select Type">
+      <nz-select nzPlaceHolder="Select Type" (nzOnSearch)="onSourceTypeSelected">
         <nz-option *ngFor="let option of sourceOptions" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
       </nz-select>
     </div>
     <div class="id-input">
-      <input nz-input [formControl]="formControl" [formlyAttributes]="field" />
+      <input nz-input [attr.disabled]="selectedSourceType == undefined ? 'disabled' : null" [formControl]="formControl" [formlyAttributes]="field" />
     </div>
   </div>
 </ng-container>
