switched to defining source-id fields in fieldGroup

--- a/client/src/app/forms/types/multi-field/multi-field.component.html
+++ b/client/src/app/forms/types/multi-field/multi-field.component.html
@@ -15,7 +15,8 @@
         nzType="minus-circle-o"
         (click)="remove(i)"></i>
     </div>
-    <div class="field-add-btn" *ngIf="last">
+    <div class="field-add-btn"
+      *ngIf="last">
       <i nz-icon
         nzType="plus-circle-o"
         (click)="addField($event)"></i>
